Translate2 - Org/src/objects/TimeManagement__c.object
<CustomObject>
    <description>Attendance for employee</description>
    <fields>
        <fullName>EnteringTime__c</fullName>
        <label>入室</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutingTime__c</fullName>
        <label>外出</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RealWorkTime__c</fullName>
        <formula>VALUE(IF(OR(ISNULL(WorkBeginTime__c), ISNULL(WorkEndTime__c)), TEXT(0) , IF(ISNULL(OutingTime__c),(TEXT(ROUND((24*ABS(WorkEndTime__c - WorkBeginTime__c)),1))),(IF(ISNULL(EnteringTime__c),(TEXT(ROUND((24*(OutingTime__c - WorkBeginTime__c)),1))),(TEXT(ROUND((24*(ABS(WorkEndTime__c - WorkBeginTime__c) - (EnteringTime__c - OutingTime__c))),1))))))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>勤務時間数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTime__c</fullName>
        <label>打刻日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RelUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkMgrkQ8U</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkBeginTime__c</fullName>
        <label>出勤時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkDay__c</fullName>
        <label>勤怠日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkEndTime__c</fullName>
        <label>退勤時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WorkerName__c</fullName>
        <label>従業員名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>従業員</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkerRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>勤怠管理</label>
    <nameField>
        <displayFormat>TIME_{YYYYMMDD}_{0000000000}</displayFormat>
        <label>勤怠管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>